--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
             <version>3.3.4</version>
             <relativePath/> <!-- lookup parent from repository -->
         </parent>
-        <groupId>hbs</groupId>
-        <artifactId>hotel-booking-service</artifactId>
+        <groupId>hbs.hotel-booking-service</groupId>
+            <artifactId>hbs</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <name>demo</name>
         <description>Demo project for Spring Boot</description>
@@ -80,6 +80,34 @@
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>postgresql</artifactId>
+                <version>1.17.6</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers</artifactId>
+                <version>1.17.6</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka-test</artifactId>
+                <version>3.1.1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>kafka</artifactId>
+                <version>1.19.3</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>mongodb</artifactId>
                 <version>1.17.6</version>
                 <scope>test</scope>
             </dependency>
